small fix for image size on mobile

--- a/styles.css
+++ b/styles.css
@@ -541,6 +541,7 @@ footer a {
   transform: translate(-50%, -50%);
   top: 50%;
   max-width: 1000px;
+  width: 86%;
 }
 
 .lightbox label img + span {
